<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_weight="0.25"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:background="#aa0000"
            android:gravity="center_horizontal"
            android:text="@string/red_color_name" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.375"
            android:background="#00aa00"
            android:gravity="center_horizontal"
            android:text="@string/green_color_name" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.375"
            android:background="#0000aa"
            android:gravity="center_horizontal"
            android:text="@string/blue_color_name" />
    </LinearLayout>

    <TextView
        android:id="@+id/first_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.16"
        android:text="@string/first_row_name"
        android:textSize="15pt" />

    <EditText
        android:id="@+id/entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.16"
        android:layout_below="@+id/first_row"
        android:inputType="text"
        android:background="@android:drawable/editbox_background" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.16"
        android:text="@string/second_row_name"
        android:textSize="15pt" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_weight="0.17"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/third_row"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/third_row_name"
            android:textSize="15pt" />

        <EditText
            android:id="@+id/entry2"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/third_row"
            android:inputType="text"
            android:background="@android:drawable/editbox_background" />
    </LinearLayout>
</LinearLayout>