<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/blue"
    android:padding="10dp">

    <TextView
        android:id="@+id/titre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/titre" />

    <TextView
        android:id="@+id/label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titre"
        android:text="@string/type_here_label" />

    <EditText
        android:id="@+id/entry"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/label"
        android:inputType="text"
        android:background="@android:drawable/editbox_background"
        android:layout_toRightOf="@+id/textView"
        android:layout_toLeftOf="@+id/textView2" />

    <Button
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/entry"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/ok_label" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ok"
        android:layout_toLeftOf="@+id/ok"
        android:layout_toStartOf="@id/ok"
        android:text="@string/cancel_label"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="X"
        android:layout_below="@+id/label"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="X"
        android:layout_below="@+id/label"
        android:layout_alignBottom="@+id/entry"
        android:layout_alignParentRight="true"
        android:gravity="center"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
